--- a/MLVScan.csproj
+++ b/MLVScan.csproj
@@ -6,8 +6,8 @@
 		<RootNamespace>MLVScan</RootNamespace>
 		<LangVersion>default</LangVersion>
 		<IsPackable>false</IsPackable>
-		<AssemblyVersion>1.6.0</AssemblyVersion>
-		<FileVersion>1.6.0</FileVersion>
+		<AssemblyVersion>1.5.9</AssemblyVersion>
+		<FileVersion>1.5.9</FileVersion>
 		<NeutralLanguage>en-US</NeutralLanguage>
 		<AssemblyName>MLVScan.MelonLoader</AssemblyName>
 		<LangVersion>latest</LangVersion>
@@ -403,6 +403,7 @@
 		<Compile Include="Models\Rules\ByteArrayManipulationRule.cs" />
 		<Compile Include="Models\Rules\COMReflectionAttackRule.cs" />
 		<Compile Include="Models\Rules\DataExfiltrationRule.cs" />
+		<Compile Include="Models\Rules\DataInfiltrationRule.cs" />
 		<Compile Include="Models\Rules\DllImportRule.cs" />
 		<Compile Include="Models\Rules\EncodedBlobSplittingRule.cs" />
 		<Compile Include="Models\Rules\EncodedStringLiteralRule.cs" />
