--- a/MLVScan.csproj
+++ b/MLVScan.csproj
@@ -133,7 +133,7 @@
     
     <PackageReference Include="ILRepack" Version="2.0.44" GeneratePathProperty="true" />
     <PackageReference Include="Mono.Cecil" Version="0.11.6" />
-    <PackageReference Include="System.Text.Json" Version="8.0.5" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
   <!-- ============================================ -->
