--- a/MLVScan.csproj
+++ b/MLVScan.csproj
@@ -14,7 +14,7 @@
     <NeutralLanguage>en-US</NeutralLanguage>
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
     <EnableDefaultCompileItems>false</EnableDefaultCompileItems>
-    <Configurations>MelonLoader;BepInEx</Configurations>
+    <Configurations>MelonLoader;BepInEx;BepInEx6Mono;BepInEx6IL2CPP</Configurations>
   </PropertyGroup>
 
   <!-- ============================================ -->
@@ -23,6 +23,7 @@
   <PropertyGroup Condition="'$(Configuration)'=='MelonLoader'">
     <DefineConstants>MELONLOADER</DefineConstants>
     <AssemblyName>MLVScan.MelonLoader</AssemblyName>
+    <NoWarn>$(NoWarn);MSB3277</NoWarn>
   </PropertyGroup>
 
   <!-- ============================================ -->
@@ -31,6 +32,23 @@
   <PropertyGroup Condition="'$(Configuration)'=='BepInEx'">
     <DefineConstants>BEPINEX</DefineConstants>
     <AssemblyName>MLVScan.BepInEx</AssemblyName>
+  </PropertyGroup>
+
+  <!-- ============================================ -->
+  <!-- BepInEx 6.x Mono Configuration              -->
+  <!-- ============================================ -->
+  <PropertyGroup Condition="'$(Configuration)'=='BepInEx6Mono'">
+    <DefineConstants>BEPINEX;BEPINEX6;BEPINEX6_MONO</DefineConstants>
+    <AssemblyName>MLVScan.BepInEx6.Mono</AssemblyName>
+  </PropertyGroup>
+
+  <!-- ============================================ -->
+  <!-- BepInEx 6.x IL2CPP Configuration            -->
+  <!-- ============================================ -->
+  <PropertyGroup Condition="'$(Configuration)'=='BepInEx6IL2CPP'">
+    <TargetFramework>net6.0</TargetFramework>
+    <DefineConstants>BEPINEX;BEPINEX6;BEPINEX6_IL2CPP</DefineConstants>
+    <AssemblyName>MLVScan.BepInEx6.IL2CPP</AssemblyName>
   </PropertyGroup>
 
   <!-- ============================================ -->
@@ -62,21 +80,49 @@
   <!-- MelonLoader-Specific Source Files           -->
   <!-- ============================================ -->
   <ItemGroup Condition="'$(Configuration)'=='MelonLoader'">
-    <Compile Include="Core.cs" />
+    <Compile Include="MelonLoader\MelonLoaderPlugin.cs" />
+    <Compile Include="MelonLoader\MelonLoaderServiceFactory.cs" />
     <Compile Include="MelonLoader\Adapters\MelonScanLogger.cs" />
     <Compile Include="MelonLoader\Adapters\GameAssemblyResolverProvider.cs" />
     <Compile Include="MelonLoader\MelonConfigManager.cs" />
     <Compile Include="MelonLoader\MelonEnvironment.cs" />
     <Compile Include="MelonLoader\MelonPluginScanner.cs" />
     <Compile Include="MelonLoader\MelonPluginDisabler.cs" />
-    <Compile Include="Services\ServiceFactory.cs" />
   </ItemGroup>
 
   <!-- ============================================ -->
   <!-- BepInEx-Specific Source Files               -->
   <!-- ============================================ -->
   <ItemGroup Condition="'$(Configuration)'=='BepInEx'">
-    <Compile Include="BepInEx\MLVScanPatcher.cs" />
+    <Compile Include="BepInEx\5\BepInEx5Patcher.cs" />
+    <Compile Include="BepInEx\Adapters\BepInExScanLogger.cs" />
+    <Compile Include="BepInEx\Adapters\BepInExAssemblyResolverProvider.cs" />
+    <Compile Include="BepInEx\BepInExConfigManager.cs" />
+    <Compile Include="BepInEx\BepInExEnvironment.cs" />
+    <Compile Include="BepInEx\BepInExPluginScanner.cs" />
+    <Compile Include="BepInEx\BepInExPluginDisabler.cs" />
+    <Compile Include="BepInEx\BepInExReportGenerator.cs" />
+  </ItemGroup>
+
+  <!-- ============================================ -->
+  <!-- BepInEx 6.x Mono Source Files               -->
+  <!-- ============================================ -->
+  <ItemGroup Condition="'$(Configuration)'=='BepInEx6Mono'">
+    <Compile Include="BepInEx\6\Mono\BepInEx6MonoPatcher.cs" />
+    <Compile Include="BepInEx\Adapters\BepInExScanLogger.cs" />
+    <Compile Include="BepInEx\Adapters\BepInExAssemblyResolverProvider.cs" />
+    <Compile Include="BepInEx\BepInExConfigManager.cs" />
+    <Compile Include="BepInEx\BepInExEnvironment.cs" />
+    <Compile Include="BepInEx\BepInExPluginScanner.cs" />
+    <Compile Include="BepInEx\BepInExPluginDisabler.cs" />
+    <Compile Include="BepInEx\BepInExReportGenerator.cs" />
+  </ItemGroup>
+
+  <!-- ============================================ -->
+  <!-- BepInEx 6.x IL2CPP Source Files             -->
+  <!-- ============================================ -->
+  <ItemGroup Condition="'$(Configuration)'=='BepInEx6IL2CPP'">
+    <Compile Include="BepInEx\6\IL2CPP\BepInEx6IL2CppPatcher.cs" />
     <Compile Include="BepInEx\Adapters\BepInExScanLogger.cs" />
     <Compile Include="BepInEx\Adapters\BepInExAssemblyResolverProvider.cs" />
     <Compile Include="BepInEx\BepInExConfigManager.cs" />
@@ -110,7 +156,7 @@
   <!-- ============================================ -->
   <ItemGroup Condition="'$(Configuration)'=='BepInEx'">
     <!-- Use NuGet package for BepInEx.Core (compilation only) -->
-    <PackageReference Include="BepInEx.Core" Version="5.*" PrivateAssets="all" 
+    <PackageReference Include="BepInEx.Core" Version="5.*" PrivateAssets="all"
                       Condition="'$(BepInExCorePath)' == ''" />
     <!-- Or use local reference if BepInExCorePath is set -->
     <Reference Include="BepInEx" Private="false" Condition="'$(BepInExCorePath)' != ''">
@@ -122,18 +168,37 @@
   </ItemGroup>
 
   <!-- ============================================ -->
+  <!-- BepInEx 6.x Mono References                 -->
+  <!-- ============================================ -->
+  <ItemGroup Condition="'$(Configuration)'=='BepInEx6Mono'">
+    <PackageReference Include="BepInEx.Core" Version="6.*-*" PrivateAssets="all" GeneratePathProperty="true" />
+    <PackageReference Include="BepInEx.Unity.Mono" Version="6.*-*" PrivateAssets="all" GeneratePathProperty="true" />
+    <PackageReference Include="BepInEx.Unity.Mono.Preloader" Version="6.*-*" PrivateAssets="all" GeneratePathProperty="true" />
+    <PackageReference Include="BepInEx.Preloader.Core" Version="6.*-*" PrivateAssets="all" GeneratePathProperty="true" />
+  </ItemGroup>
+
+  <!-- ============================================ -->
+  <!-- BepInEx 6.x IL2CPP References               -->
+  <!-- ============================================ -->
+  <ItemGroup Condition="'$(Configuration)'=='BepInEx6IL2CPP'">
+    <PackageReference Include="BepInEx.Core" Version="6.*-*" PrivateAssets="all" GeneratePathProperty="true" />
+    <PackageReference Include="BepInEx.Preloader.Core" Version="6.*-*" PrivateAssets="all" GeneratePathProperty="true" />
+    <PackageReference Include="BepInEx.Unity.IL2CPP" Version="6.*-*" PrivateAssets="all" GeneratePathProperty="true" />
+  </ItemGroup>
+
+  <!-- ============================================ -->
   <!-- Shared Package References                   -->
   <!-- ============================================ -->
   <ItemGroup>
     <!-- Use local project reference when UseLocalMLVScanCore is set -->
-    <ProjectReference Include="..\MLVScan.Core\MLVScan.Core.csproj" Condition="'$(UseLocalMLVScanCore)' == 'true'" />
-    
+    <ProjectReference Include="..\MLVScan.Core\MLVScan.Core.csproj" Condition="'$(UseLocalMLVScanCore)' == 'true'" Properties="Configuration=Release" />
+
     <!-- Use NuGet package by default -->
     <PackageReference Include="MLVScan.Core" Version="*" GeneratePathProperty="true" Condition="'$(UseLocalMLVScanCore)' != 'true'" />
-    
+
     <PackageReference Include="ILRepack" Version="2.0.44" GeneratePathProperty="true" />
     <PackageReference Include="Mono.Cecil" Version="0.11.6" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="System.Text.Json" Version="6.0.11" />
   </ItemGroup>
 
   <!-- ============================================ -->
@@ -142,19 +207,29 @@
   <Target Name="ILRepack" AfterTargets="Build">
     <ItemGroup>
       <InputAssemblies Include="$(TargetPath)" />
-      <!-- Use local build output when UseLocalMLVScanCore is true -->
-      <InputAssemblies Include="..\MLVScan.Core\bin\$(Configuration)\netstandard2.1\MLVScan.Core.dll" Condition="'$(UseLocalMLVScanCore)' == 'true'" />
+      <!-- Use local build output from Release (fixed path since MLVScan.Core is platform-agnostic) -->
+      <InputAssemblies Include="..\MLVScan.Core\bin\Release\netstandard2.1\MLVScan.Core.dll" Condition="'$(UseLocalMLVScanCore)' == 'true'" />
       <!-- Use NuGet package when UseLocalMLVScanCore is false or not set -->
       <InputAssemblies Include="$(PkgMLVScan_Core)\lib\netstandard2.1\MLVScan.Core.dll" Condition="'$(UseLocalMLVScanCore)' != 'true'" />
+      <!-- Reference paths for ILRepack to resolve dependencies -->
+      <ILRepackLib Include="$(PkgBepInEx_Core)\lib\net6.0" Condition="'$(PkgBepInEx_Core)' != '' and '$(Configuration)' == 'BepInEx6IL2CPP'" />
+      <ILRepackLib Include="$(PkgBepInEx_Core)\lib\netstandard2.1" Condition="'$(PkgBepInEx_Core)' != '' and '$(Configuration)' == 'BepInEx6Mono'" />
+      <ILRepackLib Include="$(PkgBepInEx_Preloader_Core)\lib\netstandard2.1" Condition="'$(PkgBepInEx_Preloader_Core)' != '' and ('$(Configuration)' == 'BepInEx6IL2CPP' or '$(Configuration)' == 'BepInEx6Mono')" />
+      <ILRepackLib Include="$(PkgBepInEx_Unity_IL2CPP)\lib\net6.0" Condition="'$(PkgBepInEx_Unity_IL2CPP)' != '' and '$(Configuration)' == 'BepInEx6IL2CPP'" />
+      <ILRepackLib Include="$(PkgBepInEx_Unity_Mono)\lib\netstandard2.1" Condition="'$(PkgBepInEx_Unity_Mono)' != '' and '$(Configuration)' == 'BepInEx6Mono'" />
+      <ILRepackLib Include="$(PkgBepInEx_Unity_Mono_Preloader)\lib\netstandard2.1" Condition="'$(PkgBepInEx_Unity_Mono_Preloader)' != '' and '$(Configuration)' == 'BepInEx6Mono'" />
     </ItemGroup>
-    <!-- MelonLoader ILRepack -->
-    <Exec Condition="'$(Configuration)'=='MelonLoader' and '$(GameManagedPath)' != '' and '$(MelonLoaderPath)' != ''"
-          Command="&quot;$(PkgILRepack)\tools\ILRepack.exe&quot; /parallel /union /lib:&quot;$(GameManagedPath)&quot; /lib:&quot;$(MelonLoaderPath)&quot; /out:&quot;$(OutputPath)$(AssemblyName).merged.dll&quot; &quot;@(InputAssemblies, '&quot; &quot;')&quot;" />
-    <!-- BepInEx ILRepack -->
-    <Exec Condition="'$(Configuration)'=='BepInEx' and '$(BepInExCorePath)' != ''"
-          Command="&quot;$(PkgILRepack)\tools\ILRepack.exe&quot; /parallel /union /lib:&quot;$(BepInExCorePath)&quot; /out:&quot;$(OutputPath)$(AssemblyName).merged.dll&quot; &quot;@(InputAssemblies, '&quot; &quot;')&quot;" />
+    <PropertyGroup>
+      <ILRepackArgs>&quot;$(PkgILRepack)\tools\ILRepack.exe&quot; /parallel /union</ILRepackArgs>
+      <ILRepackLibArgs Condition="'@(ILRepackLib)' != ''">/lib:&quot;@(ILRepackLib, '&quot; /lib:&quot;')&quot;</ILRepackLibArgs>
+      <ILRepackArgs>$(ILRepackArgs) $(ILRepackLibArgs)</ILRepackArgs>
+      <ILRepackArgs>$(ILRepackArgs) /out:&quot;$(OutputPath)$(AssemblyName).merged.dll&quot;</ILRepackArgs>
+      <ILRepackArgs>$(ILRepackArgs) &quot;@(InputAssemblies, '&quot; &quot;')&quot;</ILRepackArgs>
+    </PropertyGroup>
+    <Exec Command="$(ILRepackArgs)" />
     <Copy SourceFiles="$(OutputPath)$(AssemblyName).merged.dll" DestinationFiles="$(TargetPath)" Condition="Exists('$(OutputPath)$(AssemblyName).merged.dll')" />
   </Target>
+
 
   <!-- ============================================ -->
   <!-- Post-Build Copy (MelonLoader)               -->
