--- a/MLVScan.csproj
+++ b/MLVScan.csproj
@@ -212,8 +212,10 @@
       <!-- Use NuGet package when UseLocalMLVScanCore is false or not set -->
       <InputAssemblies Include="$(PkgMLVScan_Core)\lib\netstandard2.1\MLVScan.Core.dll" Condition="'$(UseLocalMLVScanCore)' != 'true'" />
       <!-- Reference paths for ILRepack to resolve dependencies -->
+      <ILRepackLib Include="$(MelonLoaderPath)" Condition="'$(Configuration)' == 'MelonLoader' and '$(MelonLoaderPath)' != ''" />
+      <ILRepackLib Include="$(GameManagedPath)" Condition="'$(Configuration)' == 'MelonLoader' and '$(GameManagedPath)' != ''" />
       <ILRepackLib Include="$(PkgBepInEx_Core)\lib\net6.0" Condition="'$(PkgBepInEx_Core)' != '' and '$(Configuration)' == 'BepInEx6IL2CPP'" />
-      <ILRepackLib Include="$(PkgBepInEx_Core)\lib\netstandard2.1" Condition="'$(PkgBepInEx_Core)' != '' and '$(Configuration)' == 'BepInEx6Mono'" />
+      <ILRepackLib Include="$(PkgBepInEx_Core)\lib\netstandard2.1" Condition="'$(PkgBepInEx_Core)' != '' and ('$(Configuration)' == 'BepInEx' or '$(Configuration)' == 'BepInEx6Mono')" />
       <ILRepackLib Include="$(PkgBepInEx_Preloader_Core)\lib\netstandard2.1" Condition="'$(PkgBepInEx_Preloader_Core)' != '' and ('$(Configuration)' == 'BepInEx6IL2CPP' or '$(Configuration)' == 'BepInEx6Mono')" />
       <ILRepackLib Include="$(PkgBepInEx_Unity_IL2CPP)\lib\net6.0" Condition="'$(PkgBepInEx_Unity_IL2CPP)' != '' and '$(Configuration)' == 'BepInEx6IL2CPP'" />
       <ILRepackLib Include="$(PkgBepInEx_Unity_Mono)\lib\netstandard2.1" Condition="'$(PkgBepInEx_Unity_Mono)' != '' and '$(Configuration)' == 'BepInEx6Mono'" />
@@ -250,32 +252,4 @@
 
   <!-- Import local.build.props if it exists for local dev overrides -->
   <Import Project="local.build.props" Condition="Exists('local.build.props')" />
-  
-  <ItemGroup>
-	  <!-- Use local project reference when UseLocalMLVScanCore is set -->
-	  <ProjectReference Include="..\MLVScan.Core\MLVScan.Core.csproj" Condition="'$(UseLocalMLVScanCore)' == 'true'" />
-	  
-	  <!-- Use NuGet package by default (when local.build.props doesn't exist or UseLocalMLVScanCore is not set) -->
-	  <PackageReference Include="MLVScan.Core" Version="*" GeneratePathProperty="true" Condition="'$(UseLocalMLVScanCore)' != 'true'" />
-	  
-	  <PackageReference Include="ILRepack" Version="2.0.44" GeneratePathProperty="true" />
-	  <PackageReference Include="Mono.Cecil" Version="0.11.6" />
-	  <PackageReference Include="System.Text.Json" Version="6.0.11" />
-	</ItemGroup>
-	
-	<Target Name="ILRepack" AfterTargets="Build">
-		<ItemGroup>
-			<InputAssemblies Include="$(TargetPath)" />
-			<!-- Use local build output when UseLocalMLVScanCore is true -->
-			<InputAssemblies Include="..\MLVScan.Core\bin\Release\netstandard2.1\MLVScan.Core.dll" Condition="'$(UseLocalMLVScanCore)' == 'true'" />
-			<!-- Use NuGet package when UseLocalMLVScanCore is false or not set -->
-			<InputAssemblies Include="$(PkgMLVScan_Core)\lib\netstandard2.1\MLVScan.Core.dll" Condition="'$(UseLocalMLVScanCore)' != 'true'" />
-		</ItemGroup>
-		<Exec Command="$(PkgILRepack)\tools\ILRepack.exe /parallel /union /lib:&quot;D:\SteamLibrary\steamapps\common\Schedule I_alternate\Schedule I_Data\Managed&quot; /lib:&quot;D:\SteamLibrary\steamapps\common\Schedule I_alternate\MelonLoader\net35&quot; /out:&quot;$(OutputPath)$(AssemblyName).merged.dll&quot; &quot;@(InputAssemblies, '&quot; &quot;')&quot;" />
-		<Copy SourceFiles="$(OutputPath)$(AssemblyName).merged.dll" DestinationFiles="$(TargetPath)" />
-	</Target>
-
-	<Target Name="PostBuild" AfterTargets="ILRepack">
-		<Exec Command="COPY &quot;$(TargetPath)&quot; &quot;D:\SteamLibrary\steamapps\common\Schedule I_alternate\Plugins&quot;" />
-	</Target>
 </Project>
