--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,10 +18,10 @@ jobs:
       with:
         dotnet-version: '8.0.x'
         
-    - name: Restore dependencies
-      run: dotnet restore MLVScan.sln
-      
     # MelonLoader
+    - name: Restore MelonLoader dependencies
+      run: dotnet restore MLVScan.csproj -p:Configuration=MelonLoader
+      
     - name: Build MelonLoader
       run: dotnet build MLVScan.csproj -c MelonLoader --no-restore
       
@@ -32,6 +32,9 @@ jobs:
         path: bin/MelonLoader/**/MLVScan.MelonLoader.dll
         
     # BepInEx 5
+    - name: Restore BepInEx dependencies
+      run: dotnet restore MLVScan.csproj -p:Configuration=BepInEx
+      
     - name: Build BepInEx
       run: dotnet build MLVScan.csproj -c BepInEx --no-restore
       
@@ -42,6 +45,9 @@ jobs:
         path: bin/BepInEx/**/MLVScan.BepInEx.dll
         
     # BepInEx 6.x Mono
+    - name: Restore BepInEx6Mono dependencies
+      run: dotnet restore MLVScan.csproj -p:Configuration=BepInEx6Mono
+      
     - name: Build BepInEx6Mono
       run: dotnet build MLVScan.csproj -c BepInEx6Mono --no-restore
       
@@ -52,6 +58,9 @@ jobs:
         path: bin/BepInEx6Mono/**/MLVScan.BepInEx6.Mono.dll
         
     # BepInEx 6.x IL2CPP
+    - name: Restore BepInEx6IL2CPP dependencies
+      run: dotnet restore MLVScan.csproj -p:Configuration=BepInEx6IL2CPP
+      
     - name: Build BepInEx6IL2CPP
       run: dotnet build MLVScan.csproj -c BepInEx6IL2CPP --no-restore
       
