--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,11 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: '8.0.x'
+    
+    - name: Install Mono (for ILRepack)
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y mono-complete
         
     # MelonLoader
     - name: Restore MelonLoader dependencies
